리팩토링
- EOF
- Delimiter 변수이름, 기본 구분자 다시 설정
- Delimiter 재정의 안하고, 변수 두개 설정
- number이 0 미만이면 예외 바로 throw함
- Scanner 중복 생성 안함 (스캐너 한 번 사용해 공유)